--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "express-validator": "^6.14.0",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.3",
-        "mongoose": "^6.3.3"
+        "pg": "^8.7.3",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.21.0"
     }
 }
