--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "personal-budget-back",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "16.15.0"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "react-scripts start",
