--- a/package.json
+++ b/package.json
@@ -2,16 +2,10 @@
   "name": "personal-budget-back",
   "version": "1.0.0",
   "description": "",
-  "engines": {
-    "node": "16.15.0"
-  },
   "main": "index.js",
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "nodemon index.js",
     "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
   },
   "author": "",
